src/simpleLogicParser/logicParser.py
# Generated from logic.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class logicParser ( Parser ):

    grammarFileName = "logic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "BOOLN", "OP", 
                      "ID", "WS" ]

    RULE_expr = 0
    RULE_opsgn = 1
    RULE_sid = 2
    RULE_boolExpr = 3

    ruleNames =  [ "expr", "opsgn", "sid", "boolExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    BOOLN=3
    OP=4
    ID=5
    WS=6

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExprContext
            self.op = None # OpsgnContext
            self.right = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(logicParser.ExprContext)
            else:
                return self.getTypedRuleContext(logicParser.ExprContext,i)


        def opsgn(self):
            return self.getTypedRuleContext(logicParser.OpsgnContext,0)


        def sid(self):
            return self.getTypedRuleContext(logicParser.SidContext,0)


        def boolExpr(self):
            return self.getTypedRuleContext(logicParser.BoolExprContext,0)


        def getRuleIndex(self):
            return logicParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = logicParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expr)
        try:
            self.state = 20
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 8
                self.match(logicParser.T__0)
                self.state = 9
                localctx.left = self.expr()
                self.state = 10
                localctx.op = self.opsgn()
                self.state = 11
                localctx.right = self.expr()
                self.state = 12
                self.match(logicParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 14
                self.match(logicParser.T__0)
                self.state = 15
                self.expr()
                self.state = 16
                self.match(logicParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 18
                self.sid()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 19
                self.boolExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpsgnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(logicParser.OP, 0)

        def getRuleIndex(self):
            return logicParser.RULE_opsgn

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpsgn" ):
                return visitor.visitOpsgn(self)
            else:
                return visitor.visitChildren(self)




    def opsgn(self):

        localctx = logicParser.OpsgnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_opsgn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(logicParser.OP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(logicParser.ID, 0)

        def getRuleIndex(self):
            return logicParser.RULE_sid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSid" ):
                return visitor.visitSid(self)
            else:
                return visitor.visitChildren(self)




    def sid(self):

        localctx = logicParser.SidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(logicParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLN(self):
            return self.getToken(logicParser.BOOLN, 0)

        def getRuleIndex(self):
            return logicParser.RULE_boolExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)




    def boolExpr(self):

        localctx = logicParser.BoolExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_boolExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(logicParser.BOOLN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





